manifests/microservice-a/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-a
  labels:
    app: microservice-a
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: microservice-a
